# valexa

./: .coveragerc  .gitignore  .travis.yml  ChangeLog.md  Pipfile  ProfilesParagraphIN.tex  ProfilesParagraphOUT.tex  Pyrene.xlsx  README.md  app.py  appveyor.yml  code_extract.py  interface.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  template.xlsx  valexa.spec  vue.config.js
core/: dataobject.py  models.py  profiles.py
django_valexa/: settings.py
electron-gui/: README.md  package-lock.json  package.json
electron-gui/src/: background.js
examples/: feinberg_coli.py  inra_pyrene.py  intern_dataset.py
examples/dataset/: sample_dataset.py
filesReport/: TemplateReport.docx
filesTex/: ListParagraphsProfile.tex  TemplateProfileParagraph.tex  TemplateRegressionInfo.tex  main.tex  variablesMain.tex
interface/: dev_profile.html  get_params.html  interface.html  processProfilesReport.html  profile.html  test_profile.html  validate.html
scripts/: convert_ui.py
src/: App.vue  background.js  main.js
src/components/: ComposantTri.vue  CompoundsBadge.vue  GeneratorSetting.vue  IPCListener.vue  LeftBar.vue  ListModifiable.vue  ValidationProgress.vue  compAlizee.vue
src/data/: data.json
src/pages/: DataEntry.vue  LoadingPage.vue  MainPage.vue  ProfileTable.vue
src/plugins/: i18n.js  vuetify.js
src/router/: index.js
src/store/: index.js
src/views/: DataView.vue  FirstView.vue  LoadingView.vue  MainPage.vue  MainView.vue  ProfileView.vue  ReportView.vue  SecondView.vue  SettingsView.vue
tests/: test_dataobject.py  test_models.py  test_models_list.py  test_profiles.py
valexa/: dataobject.py  helper.py  models.py  models_list.py  profiles.py  validate.py
valexa/core/: dataobject.py  encoders.py  html.py  models.py  models_list.py  optimizer.py  parameters.py  ploters.py  profiles.py  standard.py  xlsx.py
valexa/electron_interface/: boot_validation.py  dev_ouput.py  generateReport.py  generateReportTEX.py  ouput.py  params_export.py  test_ouput.py
valexa/examples/: feinberg_coli.py  feinberg_nicotinamide.py  inra_pyrene.py  intern_dataset.py  test_feinberg_coli.py  test_feinberg_labostat.py  (+5 more)
valexa_app/: views.py
web_valexa/: manage.py  valexa  valexa_flask.py
(+134 files in other folders)
